{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "eb2b2265-ec13-4b29-b8b9-02a25e5655fb",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e5e78db6-50dd-46f7-a347-7c802ed11072",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "4b1529fb-af58-424c-aab2-0864532414b6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "9f8be18e-28be-467d-9e88-1d2efb1400bb",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "92f5bee2-2633-4dd9-819a-84d9c34c449e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ed4161f-548b-4a24-a6ee-24d168fe5f6e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7fb2fd55-0bb9-48a3-8c48-08aa5f0b2a9a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e65d26d1-cab7-4730-9190-9a4d6eb87131",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c24a2583-695e-4cb7-b884-ad8f74ae3d88",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d3ccbca0-ee39-44e3-90a1-6ae367e7a166",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fabf2262-a622-4702-ab5e-b6d1dabddde6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "8054c6ca-0f74-4097-8aa4-bc34b388d369",
            "actions": [
                {
                    "name": "CameraSwitch",
                    "type": "Button",
                    "id": "7a5ec503-1f38-468f-a52c-9c1d0b7466ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeLook",
                    "type": "Button",
                    "id": "4d2882fd-c81d-4212-b001-1e82064fc010",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "150c9900-fce4-44d5-9e37-ff79d2215572",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ac312f9-50b9-41c2-8b0d-67923f56fb53",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreeLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}